<resources>
    <string name="app_name">BangBang</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_enroll">Enroll</string>
    <string name="title_acquaintance">Acquaintance</string>
    <string name="title_home">Home</string>
    <string name="title_record">Record</string>
    <string name="title_streaming">Streaming</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_notification_channel_id">Channel ID</string>
    <string name="default_notification_channel_name" translatable="true">Test</string>
</resources>
