<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_enroll"
        android:icon="@drawable/ic_enroll"
        android:title="@string/title_enroll" />

    <item
        android:id="@+id/navigation_acquaintance"
        android:icon="@drawable/ic_manage"
        android:title="@string/title_acquaintance" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"

        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_record"
        android:icon="@drawable/ic_record"
        android:title="@string/title_record" />

    <item
        android:id="@+id/navigation_streaming"
        android:icon="@drawable/ic_streaming3"
        android:title="@string/title_streaming" />
</menu>
